--- a/css/wp-noteup.css
+++ b/css/wp-noteup.css
@@ -1,24 +1,9 @@
-/**
- * Style and disable WordPress and Browser stylesheets
- * from adding lines around our input.
- */
-.wp-noteup-textarea,
-.wp-noteup-textarea:active,
-.wp-noteup-textarea:focus {
-	width: 100%;
-	max-height: 200px;
-	display: block;
-	border: none;
-	-webkit-box-shadow: none;
-	-moz-box-shadow: none;
-	box-shadow: none;
-	background-color: transparent;
-	outline: 0;
-	-webkit-transition: none;
-	-o-transition: none;
-	-moz-transition: none;
-	transition: none;
-	line-height: 21px;
-	overflow: hidden;
-	resize: none;
+.cmb2-id-wp-noteup {
+	padding: 5px 0 0 0 !important;
+}
+
+.cmb2-id-wp-noteup .button.insert-media {
+	position: absolute;
+	right: 0;
+	top: 5px;
 }
