Make sure only the add media button shows.

--- a/css/wp-noteup.css
+++ b/css/wp-noteup.css
@@ -1,3 +1,4 @@
+/* Resize the Media Button */
 .cmb2-id-wp-noteup {
 	padding: 10px 0 0 0 !important;
 }
@@ -11,4 +12,13 @@
 	right: 0;
 	top: 5px;
 	width: 32px;
+}
+
+/* Make sure only the add media buttons shows. */
+#wp-wp_noteup-media-buttons > * {
+	display: none;
+}
+
+#wp-wp_noteup-media-buttons > .add_media {
+	display: block;
 }
