--- a/css/wp-noteup.css
+++ b/css/wp-noteup.css
@@ -1,3 +1,10 @@
+/**
+ * Admin Styles.
+ *
+ * @package aubreypwd\WP_Noteup
+ * @since  1.1
+ */
+
 /* Resize the Media Button */
 .cmb2-id-wp-noteup {
 	padding: 10px 0 0 0 !important;
